cmake_minimum_required(VERSION 2.8)
project( Vision-2012 )
find_package( OpenCV REQUIRED )
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_FLAGS "-g -O3 -std=c++11 -Wall -Wextra -Weverything -Wno-c++98-compat")
set(CMAKE_C_FLAGS "-Wall")
set(CMAKE_CXX_COMPILER clang++)
add_executable( vision Vision.cxx )
target_link_libraries( vision ${OpenCV_LIBS} )
