cmake_minimum_required(VERSION 2.8)
project( Vision-2012 )
find_package( OpenCV REQUIRED )
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_C_COMPILER clang)
set(CMAKE_C_FLAGS_RELEASE "-O3 -Wall -Wextra -Weverything")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -std=gnu++11 -Wno-c++98-compat")
set(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra -Weverything -Wno-c++98-compat")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -std=gnu++11 -Wno-c++98-compat")
set(CMAKE_CXX_COMPILER clang++)
add_executable( vision Vision.cxx )
target_link_libraries( vision ${OpenCV_LIBS} )
